# aero-flux

./: README.md  __init__.py  airports.py  app.py  charts.py  data.py  pyproject.toml
deploy/: launch_script.sh
models/: loader.py  models.py  xgb_classifier_xgb_full.joblib  xgb_classifier_xgb_full_aircraft.joblib  xgb_regressor_xgb_full.joblib  xgb_regressor_xgb_full_aircraft.joblib
